--- a/article/service.yml
+++ b/article/service.yml
@@ -1,11 +1,17 @@
-apiVersion: v1
 kind: Service
+apiVersion: v1
 metadata:
-  name: gke-test-service
+  name: article-service
+
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
-    - port: 80
+    - name: http
+      protocol: TCP
+      port: 7078
       targetPort: 7078
   selector:
-    app: gke-test
+    app: article-service
+
+  externalIPs:
+    - 127.0.0.1
