--- a/article/service.yml
+++ b/article/service.yml
@@ -1,14 +1,11 @@
-kind: Service
 apiVersion: v1
+kind: Service
 metadata:
-  name: article-service
-
+  name: gke-test-service
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
-    - name: http
-      protocol: TCP
-      port: 7078
+    - port: 80
       targetPort: 7078
   selector:
-    app: article-service
+    app: gke-test
