--- a/article/deployment.yml
+++ b/article/deployment.yml
@@ -27,25 +27,13 @@ spec:
             - name: GET_HOSTS_FROM
               value: dns
             - name: SPRING_DATASOURCE_DRIVER_CLASS_NAME
-              valueFrom:
-                configMapKeyRef:
-                  name: springdatasourcedriverclassname
-                  key: com.mysql.jdbc.Driver
+              value: com.mysql.jdbc.Driver
             - name: SPRING_DATASOURCE_URL
-              valueFrom:
-                configMapKeyRef:
-                  name: springdatasourceurl
-                  key: studmysql01.fhict.local
+              value: studmysql01.fhict.local
             - name: SPRING_DATASOURCE_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: springdatasourcepassword
-                  key: Egt4gTSMOK
+              value: Egt4gTSMOK
             - name: SPRING_DATASOURCE_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: springdatasourceusername
-                  key: dbi409059
+              value: dbi409059
 
           readinessProbe:
             httpGet:
